Criando o topo do site

--- a/src/cloneGlobo.html
+++ b/src/cloneGlobo.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estiloGlobo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-bJfaV8WzGZ0FV7QalxIZeO9yLhEEoUvq3emvm0oUuZbw2sAFsYwT6I1T+0RrJUfRM6UvwJmKELhRmRzw4ThZw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <title>CloneGlobo</title>
 </head>
 <body>
-    
+    <header>
+        <div class="top">
+            <div class="dropdown">
+                <button class="dropdownbutton"> <a href="#"> Menu </a></button>
+            </div>
+            <div class="traco">|</div>
+            <div class="assine">
+                <button class="ass"><a href="#"> Assine </a></button>
+            </div>
+            <div class="globo">
+               <a href="#"> <img src="../imgGlobo/Logo_do_Portal_Globo.com_(2021–presente).svg.png" alt="Globo"></a>
+            </div>
+            <div>
+                <button class="conta"><a href="#"> Conta </a></button>
+            </div>
+            <div class="pesquisa">
+                <label for="busca"></label>
+                <input type="search" id="busca" name="busca" placeholder="Busca">
+            </div>
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li ><a href="#" id="g1">g1</a></li>
+                    <li ><a href="#" id="oglobo">o globo</a></li>
+                    <li ><a href="#" id="valor">valor</a></li>
+                    <li ><a href="#" id="ge">ge</a></li>
+                    <li ><a href="#" id="cartola">cartola</a></li>
+                    <li ><a href="#" id="globoplay">globoplay</a></li>
+                    <li ><a href="#" id="gshow">gshow</a></li>
+                    <li ><a href="#" id="quem">quem</a></li>
+                    <li ><a href="#" id="receitas">receitas</a></li>
+                    <li ><a href="#" id="giga">giga gloob</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
