Criação de botões

--- a/src/cloneGlobo.html
+++ b/src/cloneGlobo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estiloGlobo.css">
+    <link rel="stylesheet" href="estiloGlobo2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-bJfaV8WzGZ0FV7QalxIZeO9yLhEEoUvq3emvm0oUuZbw2sAFsYwT6I1T+0RrJUfRM6UvwJmKELhRmRzw4ThZw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
@@ -26,6 +27,7 @@
             <div>
                 <button class="conta"><a href="#"> Conta </a></button>
             </div>
+            <div class="traco">|</div>
             <div class="pesquisa">
                 <label for="busca"></label>
                 <input type="search" id="busca" name="busca" placeholder="Busca">
@@ -48,5 +50,25 @@
             </nav>
         </div>
     </header>
+    
+        <div class="banner">
+          
+        </div>
+    <section class="conteudo">     
+        <article class="noticias">
+            <div class="principal">
+
+            </div>
+        </article>
+
+        <article class="esporte">
+
+        </article>
+
+        <article class="famosos">
+
+        </article>
+
+    </section>
 </body>
 </html>
