--- a/src/cloneGlobo.html
+++ b/src/cloneGlobo.html
@@ -59,6 +59,24 @@
             <div class="principal">
 
             </div>
+            <div class="conteudo1" id="1">
+
+            </div>
+            <div class="conteudo1" id="2">
+
+            </div> 
+            <div class="conteudo1" id="3">
+
+            </div> 
+            <div class="conteudo1" id="4">
+
+            </div> 
+            <div class="conteudo1" id="5">
+
+            </div> 
+            <div class="conteudo1" id="6">
+
+            </div>
         </article>
 
         <article class="esporte">
