Mudança na logo

--- a/americanas/src/index.html
+++ b/americanas/src/index.html
@@ -30,22 +30,23 @@
                 <div class="pesquisar">
                     <input id="consulta" type="text" placeholder="Busque aqui seu produto">
                      <img id="lupa" src="../imagens/lupaLogo.png" alt="">
-                  </div>
-                  <div id="login">
-                    <img id="ilogin" src="../imagens/login.png" alt="">
-                  </div>
+                    
+                     </div>
+            <div id="login">
+                <img id="ilogin" src="../imagens/login.png" alt="">
+            </div>  
             </div>
             <nav>
                 <ul>
                     <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
-                    <li><a href="#">pra sua empresa</a></li>
+                    <li><a href="#">baixe o app</a></li>
+                    <li><a href="#">entrega rápida</a></li>
+                    <li><a href="#">nossas lojas</a></li>
+                    <li><a href="#">ame digital</a></li>
+                    <li><a href="#">marcas próprias</a></li>
+                    <li><a href="#">lojas oficiais</a></li>
+                    <li><a href="#">serviços</a></li>
+                    <li><a href="#">oferta do dia</a></li>
                     
                 </ul>
             </nav>
