Ajustes da tela

--- a/americanas/src/index.html
+++ b/americanas/src/index.html
@@ -62,6 +62,7 @@
         </section>
         <section class="faixa_opcao">
             <div id="faixa" >
+                <a href="#">todos os departamentos</a>
                 <a href="#">mercado</a>
                 <a href="#">celulares</a>
                 <a href="#">eletrodomésticos</a>
