Criação dos slides

--- a/americanas/src/index.html
+++ b/americanas/src/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
+        <!--Criando o topo da página-->
         <section id="topo">
+            <!--Colocando a logo da lacta-->
             <div id="lacta">
                 <img id="lac" src="../imagens/lacta.png" alt="Lacta">
                 <img id="ovos" src="../imagens/ovos de páscoa.jpg" alt="Ovos">
@@ -22,6 +24,7 @@
             </div>
             <p id="publi">Publicidade</p>
         </section>
+        <!--Pós topo com fundo vermelho-->
         <section id="pos_topo">
             <div id="logo">
                 <img id="logo" src="../imagens/logo-lojas-americanas.jpg" alt="">
@@ -45,6 +48,7 @@
                 <img id="coracao" src="../imagens/coração.png" alt="">
                 <img id="cesta" src="../imagens/cesta.png" alt="">
             </div>
+            <!--Menus do pós topo-->
             <nav>
                 <ul>
                     <li><a href="#">pra sua empresa</a></li>
@@ -60,6 +64,7 @@
                 </ul>
             </nav> 
         </section>
+        <!--Faixa após o pós topo-->
         <section class="faixa_opcao">
             <div id="faixa" >
                 <a href="#">todos os departamentos</a>
@@ -75,5 +80,36 @@
             </div>
         </section>
     </header>
+    <!--A faixa azul-->
+    <article id="banner1">
+        <p class="amarelo1">Só no app</p>
+        <p>você aproveita ofertas exclusivas  </p>
+        <p class="amarelo"> baixe agora ></p>
+    </article>
+    <section id="carrocel">
+        <ul class="slider">
+            <li>
+                <div id="imagem1"></div>
+            </li>
+            <li>
+                <div id="imagem2"></div>
+            </li>
+            <li>
+                <div id="imagem3"></div>
+            </li>
+            <li>
+                <div id="imagem4"></div>
+            </li>
+            <li>
+                <div id="imagem5"></div>
+            </li>
+            <li>
+                <div id="imagem6"></div>
+            </li>
+            <li>
+                <div id="imagem7"></div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
