--- a/carrocel/index.html
+++ b/carrocel/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css.css">
     <title>Estudando carrocel</title>
 </head>
 <body>
      <div class="container">
-        <div class="garelly wrapper">
-             <div class="garelly">
-                <img src="https://source.unsplash.com/randon/205x205/?beach" alt="beach imagens">
+        <button class="arrow-left control" aria-label="Previous image"><</button>
+        <button class="arrow-rigth control" aria-label="Previous image">></button>
+        <div class="gallery-wrapper">
+             <div class="gallery">
+
+                <img src="https://source.unsplash.com/randon/150x150/?beach" alt="beach imagens" class="item current-item">
+                <img src="https://source.unsplash.com/randon/150x150/?animal" alt="animal imagens" class="item">
+                <img src="https://source.unsplash.com/randon/150x150/?city" alt="city imagens" class="item">
+                <img src="https://source.unsplash.com/randon/150x150/?street" alt="street imagens" class="item">
+                <img src="https://source.unsplash.com/randon/150x150/?house" alt="house imagens" class="item">
              </div>
         </div>
 
