Finalizando o banner da página

--- a/americanas/src/index.html
+++ b/americanas/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone da Americanas</title>
+    <link rel="stylesheet" href="../banner.css">
     <link rel="stylesheet" href="style.css">
     
     
@@ -87,6 +88,21 @@
         <p>você aproveita ofertas exclusivas  </p>
         <p class="amarelo"> baixe agora ></p>
     </article>
-   
+    <!--Criando o carrocel da página-->
+    <div class="container">
+        <button class="arrow-left control" aria-label="Previous image"><</button>
+        <button class="arrow-rigth control" aria-label="Previous image">></button>
+        <div class="gallery-wrapper">
+             <div class="gallery">
+
+                <img src="../imagens/banner1.png" alt="baner1" class="item current-item">
+                <img src="../imagens/banner2.png" alt="banner2" class="item">
+                <img src="../imagens/banner3.png" alt="banner3" class="item">
+                <img src="../imagens/banner4.png" alt="banner4" class="item">
+             </div>
+        </div>
+
+     </div>
+     <script type="text/javascript" src="../banner.js"></script>
 </body>
 </html>
