--- a/Copasa/src/index.html
+++ b/Copasa/src/index.html
@@ -8,6 +8,29 @@
     <title>Clone do site da copasa</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container_topo">
+            <img src="../img/logo.png" alt="Logo da Copasa" id="copasa">
+            <div class="redes">
+                <a href="#"><img src="../img/face.png" alt="" id="face"></a>
+                <a href="#"><img src="../img/twit.png" alt="" id="twit"></a>
+                <a href="#"><img src="../img/tube.png" alt="" id="tube"></a>
+                <a href="#"><img src="../img/insta.png" alt="" id="insta"></a>
+                    <input type="search" placeholder="Pesquisa" id="pesquisa">
+            </div>
+            <div class="navegar">
+                |<a href="#"> 115-0800 0300 115  </a>
+                |<a href="#"> Ouvidoria  </a>
+                |<a href="#"> Denúncias  </a>
+                |<a href="#"> Relacionamento  </a>
+                |<a href="#"> Inverstors  </a>
+                |<a href="#"> Empreendedor  </a>
+                |<a href="#" id="lgpd"> LGPD  </a>
+                |<a href="#" id="frente"> Compilance  </a>
+                |<a href="#"> Licitações e contratos  </a>
+                |<a href="#"> Imprenssa  </a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
