--- a/Copasa/src/index.html
+++ b/Copasa/src/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <nav>
-            <a href="#">A COPASA</a>|
+            <a href="#" id="copasa1">A COPASA</a>|
             <a href="#">GOVERNANÇA CORPORATIVA</a>|
             <a href="#">ÁGUA</a>|
             <a href="#">A COPASA</a>|
