Tentativa 1 de menu

--- a/Copasa/src/index.html
+++ b/Copasa/src/index.html
@@ -32,19 +32,46 @@
             </div>
         </div>
         <nav>
-            <a href="#" id="copasa1">A COPASA</a>|
-            <a href="#">GOVERNANÇA CORPORATIVA</a>|
-            <a href="#">ÁGUA</a>|
-            <a href="#">A COPASA</a>|
-            <a href="#">ESGOTO</a>|
-            <a href="#">MEIO AMBIENTE</a>|
-            <a href="#">INVESTIDORES</a>|
-            <a href="#">AGÊNCIA VIRTUAL</a>
+            <ul>
+                <li><a href="#" id="copasa1">A COPASA
+                    
+                    <ul>
+                        <li><a href="#">A Empresa</a></li>
+                        <li><a href="#">Área de atuação</a></li>
+                        <li><a href="#">Licitações e contraatos</a></li>
+                        <li><a href="#">Nossos prêmios </a></li>
+                        <li><a href="#">Números e indicadores operacionais</a></li>
+                        <li><a href="#">Portal da transparência</a></li>
+                    </ul>
+                </li>
+                <li>
+                </a>|
+                <a href="#">GOVERNANÇA CORPORATIVA</a>|
+                </li>    
+                <li>
+                <a href="#">ÁGUA</a>|
+                </li>    
+                <li>
+                <a href="#">A COPASA</a>|
+                </li>
+                <li>
+                <a href="#">ESGOTO</a>|
+                </li>
+                <li>
+                <a href="#">MEIO AMBIENTE</a>|
+                </li>
+                <li>
+                <a href="#">INVESTIDORES</a>|
+                </li>
+                <li>
+                <a href="#">AGÊNCIA VIRTUAL</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <div id="link">
         <a href="#"> INFORME DE RENDIMENTOS PARA EMPREGADOS(AS) DESLIGADOS(AS) E LICENCIADOS(AS)</a>
-        <hr>
     </div>
+    <hr>
 </body>
 </html>
