--- a/Copasa/src/index.html
+++ b/Copasa/src/index.html
@@ -33,11 +33,9 @@
         </div>
         <nav>
             <ul id="menus">
-                <li><a href="#" id="copasa1">A COPASA 
-                 
+                <li><a href="#" id="copasaum">A COPASA </a>
                 </li>
-                <li>
-                </a>|
+                <li>|
                 <a href="#">GOVERNANÇA CORPORATIVA</a>|
                 </li>    
                 <li>
