--- a/Copasa/src/index.html
+++ b/Copasa/src/index.html
@@ -34,6 +34,17 @@
         <nav>
             <ul id="menus">
                 <li><a href="#" id="copasaum">A COPASA </a>
+                    <ul id="caixa_menu">
+                        <li><a href="#">A Empresa</a></li>
+                        <li><a href="#">Área de atuação</a></li>
+                        <li><a href="#">Licitação e contratos</a></li>
+                        <li><a href="#">Nossos Prêmios</a></li>
+                        <li><a href="#">Números e indicadores operacionais</a></li>
+                        <li><a href="#">Portal da transparência </a></li>
+                        <li><a href="#">Concurso</a></li>
+                        <li><a href="#">Responsabilidade social</a></li>
+                        <li><a href="#">Relatórios anuais e demonstrações financeiras</a></li>
+                    </ul>
                 </li>
                 <li>|
                 <a href="#">GOVERNANÇA CORPORATIVA</a>|
