--- a/Copasa/src/index.html
+++ b/Copasa/src/index.html
@@ -47,7 +47,21 @@
                     </ul>
                 </li>
                 <li>|
-                <a href="#">GOVERNANÇA CORPORATIVA</a>|
+                <a href="#" id="g_corporativa">GOVERNANÇA CORPORATIVA</a>|
+                    <ul id="caixa_menu2">
+                        <li><a href="#">Evolução da Governança</a></li>
+                        <li><a href="#">Novo Mercado</a></li>
+                        <li><a href="#">Composição Acionária</a></li>
+                        <li><a href="#">Estatuto Social</a></li>
+                        <li><a href="#">Estrutura Organizacional</a></li>
+                        <li><a href="#">Atas de reuniões</a></li>
+                        <li><a href="#">Código de conduta e Integridade</a></li>
+                        <li><a href="#">Código de conduta e integridade para Fornecedores</a></li>
+                        <li><a href="#">Políticas e Plano de Integridade</a></li>
+                        <li><a href="#">Informe sobre o código de Governança</a></li>
+                        <li><a href="#">Carta anual de políticas públicas </a></li>
+                        
+                    </ul>
                 </li>    
                 <li>
                 <a href="#">ÁGUA</a>|
