Finalização dos menus flutuantes

--- a/Copasa/src/index.html
+++ b/Copasa/src/index.html
@@ -64,16 +64,46 @@
                     </ul>
                 </li>    
                 <li>
-                <a href="#">ÁGUA</a>|
+                <a href="#" id="agua">ÁGUA</a>|
+                    <ul id="caixa_menu3">
+                        <li><a href="#">Abastecimento</a></li>
+                        <li><a href="#">Informações de abastecimento</a></li>
+                        <li><a href="#">Ligação de água</a></li>
+                        <li><a href="#">Nível dos reservatórios</a></li>
+                        <li><a href="#">Cidades em Rodízio</a></li>
+                        <li><a href="#">Programa caçaGotas</a></li>
+                        <li><a href="#">Qualidade</a></li>
+                        <li><a href="#">Visita à estação de tratamento de água</a></li>
+                        <li><a href="#">Estudo de alternativas para o semiárido</a></li>
+                        <li><a href="#">Medição Individualizada</a></li>
+
+                    </ul>
                 </li>    
                 <li>
-                <a href="#">A COPASA</a>|
+                <a href="#" id="esgoto">ESGOTO</a>|
+                    <ul id="caixa_menu4">
+                        <li><a href="#">Ligação de Esgoto</a></li> 
+                        <li><a href="#">PRECEND</a></li>
+                        <li><a href="#">O Sistema de Esgoto</a></li>
+                        <li><a href="#">Processos de tratamento</a></li>
+                        <li><a href="#">Visita à estação de tratamento de esgoto</a></li>
+                        <li><a href="#">Valorização do esgoto</a></li>
+                        <li><a href="#">PMI 001/2018</a></li>
+
+                    </ul>
                 </li>
                 <li>
-                <a href="#">ESGOTO</a>|
-                </li>
-                <li>
-                <a href="#">MEIO AMBIENTE</a>|
+                <a href="#" id="meio_ambiente">MEIO AMBIENTE</a>|
+                    <ul id="caixa_menu5">
+                        <li><a href="#">Área de Proteção</a></li>
+                        <li><a href="#">Educação Ambiental</a></li>
+                        <li><a href="#">Gestão Ambiental</a></li>
+                        <li><a href="#">Política Ambiental</a></li>
+                        <li><a href="#">Cultivando Água Boa</a></li>
+                        <li><a href="#">Pro Mananciais</a></li>
+                        <li><a href="#">Regularizaçao Ambiental</a></li>
+
+                    </ul>
                 </li>
                 <li>
                 <a href="#">INVESTIDORES</a>|
